--- a/application.css
+++ b/application.css
@@ -1,3 +1,14 @@
+body {
+    background-image: url(http://i.imgur.com/K3mPv14.jpg);
+}
+div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 750px;
+}
+
 #view_campgrounds {
-    text-decoration: line-through;
+    margin: 10px;
 }
