--- a/client/public/edit_product.ejs
+++ b/client/public/edit_product.ejs
@@ -8,17 +8,22 @@
     />
   </head>
 
-  <body>
-    <h1>Edit Product</h1>   
+  <body class="m-4">
+    <h1 class="text-center m-3">Edit Product</h1>   
 
     <form action="edit" method="POST">
-      <input type="text" name="name" value="<%=product.name%>" /> <br />
-      <input type="text" name="description" value="<%=product.description%>" /> <br />
+      <div class="form-group">
+        <label>Name</label>
+        <input class="form-control" type="text" name="name" value="<%=product.name%>" />
+      </div>
+      <label>Description</label>
+      <div class="form-group">
+        <textarea class="form-control" rows="10" name="description"><%=product.description%></textarea>
+      </div>
 
-      <input type="submit" value="Submit Form" />
+      <input class="btn btn-primary" type="submit" value="Submit Form" />
     </form>
 
-    <div id="edit_product_container"></div>
     <script src="../../bundle.js"></script>
   </body>
 </html>
