--- a/client/public/show_product.ejs
+++ b/client/public/show_product.ejs
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Show Page</title>
-</head>
-<body>
-    <h1>Product Show Page</h1>
-    <p><%= product.id %></p>
-    <p><%= product.name %></p>
-    <p><%= product.description %></p>
-</body>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <style>
+        body{
+            background-color: #f0f0f0;
+        }
+    </style>
+  </head>
+  <body class="container text-center p-4">
+    <h1 class=" mb-4">Product Show Page</h1>
+    <div class="bg-light p-4 rounded">
+      <img
+        className="rounded mb-4"
+        width="800"
+        src="../../images/best_beach.jpg"
+        alt="Beach Pic"
+      />
+      <h3 class="p-4 header"><%= product.name %></h3>
+      <h6><%= product.description %></h6>
+    </div>
+  </body>
 </html>
