--- a/client/public/show_product.ejs
+++ b/client/public/show_product.ejs
@@ -9,16 +9,16 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
     <style>
-        body{
-            background-color: #f0f0f0;
-        }
+      body {
+        background-color: #f0f0f0;
+      }
     </style>
   </head>
   <body class="container text-center p-4">
-    <h1 class=" mb-4">Product Show Page</h1>
+    <h1 class="mb-4">Product Show Page</h1>
     <div class="bg-light p-4 rounded">
       <img
-        className="rounded mb-4"
+        class="img-fluid rounded"
         width="800"
         src="../../images/best_beach.jpg"
         alt="Beach Pic"
