display the product image and add comments header

--- a/client/public/show_product.ejs
+++ b/client/public/show_product.ejs
@@ -20,11 +20,12 @@
       <img
         class="img-fluid rounded"
         width="800"
-        src="../../images/best_beach.jpg"
+        src="<%= product.image %>"
         alt="Beach Pic"
       />
       <h3 class="p-4 header"><%= product.name %></h3>
       <h6><%= product.description %></h6>
     </div>
+    <h1>Comments</h1>
   </body>
 </html>
