define and export a simple class based component then display the same in the product show page

--- a/client/public/show_product.ejs
+++ b/client/public/show_product.ejs
@@ -27,5 +27,9 @@
       <h6><%= product.description %></h6>
     </div>
     <h1>Comments</h1>
+    <div id="comments"></div>
+
+    <!-- We need the following script for webpack to render React -->
+    <script src="../../bundle.js"></script>
   </body>
 </html>
