--- a/client/public/css/nav-items.css
+++ b/client/public/css/nav-items.css
@@ -1,5 +1,5 @@
 .nav-items {
-  background-color: rgb(48, 43, 197);
+  /* background-color: rgb(48, 43, 197); */
   overflow: auto;
   white-space: nowrap;
 }
